# graphc

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  pr.yml  release.yml
dev/: docker-compose.yml
dev/data/: companies.csv  people.csv  works_at.csv
src/: cli.py  errors.py  main.py
src/console/: __init__.py  completions.py  history.py  loop.py  utils.py
src/db/: __init__.py  driver.py  query.py
src/domain/: __init__.py  auth.py
src/utils/: __init__.py  auth.py  dirs.py  output.py
tests/: conftest.py  test_cli.py
tests/console/: test_utils.py
tests/console/testdata/: multiline.cypher  whitespace-only.cypher  whitespace.cypher
